deps/v8/test/message/fail/weak-refs-unregister.out
*%(basename)s:*: TypeError: unregisterToken ('1') must be an object
fg.unregister(1);
   ^
TypeError: unregisterToken ('1') must be an object
    at FinalizationRegistry.unregister (<anonymous>)
    at *%(basename)s:*:4
